--- a/MyApp/MyApp.Droid/MyApp.Droid.csproj
+++ b/MyApp/MyApp.Droid/MyApp.Droid.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.UI">
-      <Version>1.28.1-dev.2183</Version>
+      <Version>1.29.1-aobfwasm.2834</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
