--- a/MyApp/MyApp.iOS/MyApp.iOS.csproj
+++ b/MyApp/MyApp.iOS/MyApp.iOS.csproj
@@ -99,7 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.UI">
-      <Version>1.28.1-dev.2183</Version>
+      <Version>1.29.1-aobfwasm.2834</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="..\MyApp.Shared\MyApp.Shared.projitems" Label="Shared" Condition="Exists('..\MyApp.Shared\MyApp.Shared.projitems')" />
