Fixed support for local assets.
The resource generation for iOS and Android is linked to the presence of ResourcesDirectory, which was missing.

--- a/MyApp/MyApp.iOS/MyApp.iOS.csproj
+++ b/MyApp/MyApp.iOS/MyApp.iOS.csproj
@@ -11,7 +11,8 @@
     <AssemblyName>MyApp.iOS.iOS</AssemblyName>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-  </PropertyGroup>
+    <ResourcesDirectory>..\MyApp.Shared\Strings</ResourcesDirectory>
+	</PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
