--- a/MyApp/MyApp.Droid/MyApp.Droid.csproj
+++ b/MyApp/MyApp.Droid/MyApp.Droid.csproj
@@ -19,7 +19,8 @@
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
-  </PropertyGroup>
+    <ResourcesDirectory>..\MyApp.Shared\Strings</ResourcesDirectory>
+	</PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
