--- a/MyApp/MyApp.Wasm/MyApp.Wasm.csproj
+++ b/MyApp/MyApp.Wasm/MyApp.Wasm.csproj
@@ -23,8 +23,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.UI" Version="1.29.1-aobfwasm.2834" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.0-dev.17" />
+		<PackageReference Include="Uno.UI" Version="1.31.0-dev.235" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.0-dev.40" />
 	</ItemGroup>
 
 	<Import Project="..\MyApp.Shared\MyApp.Shared.projitems" Label="Shared" Condition="Exists('..\MyApp.Shared\MyApp.Shared.projitems')" />
