--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -21,50 +21,20 @@ phases:
   - task: NuGetCommand@2
     inputs:
       command: restore
-      solution: Controls/UWPControls.sln
+      solution: src/MyApp.sln
       selectOrConfig: select
       includeNuGetOrg: true
       verbosityRestore: Normal
 
   - task: MSBuild@1
     inputs:
-      solution: Controls/UWPControls.sln
+      solution: src/MyApp.sln
       msbuildLocationMethod: version
       msbuildVersion: latest
       msbuildArchitecture: x86
-      msbuildArguments: /p:Configuration=Release "/p:Platform=Any CPU" /detailedsummary "/p:PackageVersion=$(GITVERSION.FullSemVer)" "/p:InformationalVersion=$(GITVERSION.InformationalVersion)" "/p:PackageOutputPath=$(build.artifactstagingdirectory)"
+      msbuildArguments: /p:Configuration=Release "/p:Platform=Any CPU" /detailedsummary "/p:PackageVersion=$(GITVERSION.FullSemVer)" "/p:InformationalVersion=$(GITVERSION.InformationalVersion)"
       clean: false
       maximumCpuCount: true
       restoreNugetPackages: false
       logProjectEvents: false
       createLogFile: false
-
-  - task: CopyFiles@2
-    inputs:
-      SourceFolder: $(Build.SourcesDirectory)\SDKExamples.iOS\bin
-      Contents: $(Build.SourcesDirectory)\SDKExamples.iOS\bin\**\*.ipa
-      TargetFolder: $(build.artifactstagingdirectory)
-
-  - task: CopyFiles@2
-    inputs:
-      SourceFolder: $(Build.SourcesDirectory)\SDKExamples.Droid\bin
-      Contents: $(Build.SourcesDirectory)\SDKExamples.Droid\bin\**\*.apk
-      TargetFolder: $(build.artifactstagingdirectory)
-
-  - task: PublishBuildArtifacts@1
-    inputs:
-      PathtoPublish: $(build.artifactstagingdirectory)
-      ArtifactName: TelerikUWP-NugetPackages
-      ArtifactType: Container
-
-  - task: PublishSymbols@2
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-    inputs:
-      SymbolsFolder:
-      SearchPattern: '**/bin/**/*.pdb'
-      IndexSources: true
-      PublishSymbol: true
-      SymbolServerType: TeamServices
-      DetailedLog: false
-      TreatNotIndexedAsWarning: false
-      SymbolsArtifactName: Symbols_$(BuildConfiguration)
