--- a/src/MyApp.iOS/Info.plist
+++ b/src/MyApp.iOS/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
   <dict>
 	<key>CFBundleDisplayName</key>
-	<string>UnoQuickStart.iOS</string>
+	<string>MyApp</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.companyname.MyApp</string>
 	<key>CFBundleShortVersionString</key>
@@ -13,7 +13,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
-	<string></string>
+	<string>8.0</string>
 	<key>UIDeviceFamily</key>
 	<array>
 	  <integer>1</integer>
@@ -48,7 +48,7 @@
 	<key>UILaunchImageMinimumOSVersion</key>
 	<string>9.0</string>
 	<key>UILaunchImageOrientation</key>
-	<string>Portait</string>
+	<string>Portrait</string>
 	<key>UILaunchImageSize</key>
 	<string>{320, 568}</string>
   </dict>
