--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,30 +1,22 @@
-phases:
-- phase: Packages
+jobs:
+- job: Packages
+
+  pool:
+    vmImage: 'windows-2019'
+
   variables:
     NUGET_PACKAGES: $(Agent.WorkFolder)\.nuget
     NUGET_HTTP_CACHE_PATH: $(Agent.WorkFolder)\.nuget-http-cache
+    ANDROID_NDK_HOME: C:\Microsoft\AndroidNDK64\android-ndk-r16b
+    ANDROID_NDK_PATH: C:\Microsoft\AndroidNDK64\android-ndk-r16b
 
   steps:
   - checkout: self
     clean: true
-    lfs: true
 
-  - task: GitVersion@3
+  - task: GitVersion@5
     inputs:
       updateAssemblyInfo: false
-
-  - task: NuGetToolInstaller@0
-    inputs:
-      versionSpec: 4.3.0
-      checkLatest: false
-
-  - task: NuGetCommand@2
-    inputs:
-      command: restore
-      solution: src/MyApp.sln
-      selectOrConfig: select
-      includeNuGetOrg: true
-      verbosityRestore: Normal
 
   - task: MSBuild@1
     inputs:
@@ -32,7 +24,7 @@ phases:
       msbuildLocationMethod: version
       msbuildVersion: latest
       msbuildArchitecture: x86
-      msbuildArguments: /p:Configuration=Release "/p:Platform=Any CPU" /detailedsummary "/p:PackageVersion=$(GITVERSION.FullSemVer)" "/p:InformationalVersion=$(GITVERSION.InformationalVersion)"
+      msbuildArguments: /r /p:Configuration=Release "/p:Platform=Any CPU" /detailedsummary "/p:PackageVersion=$(GITVERSION.FullSemVer)" "/p:InformationalVersion=$(GITVERSION.InformationalVersion)"
       clean: false
       maximumCpuCount: true
       restoreNugetPackages: false
