Disable package siging for UWP

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -9,6 +9,7 @@ jobs:
     NUGET_HTTP_CACHE_PATH: $(Agent.WorkFolder)\.nuget-http-cache
     ANDROID_NDK_HOME: C:\Microsoft\AndroidNDK64\android-ndk-r16b
     ANDROID_NDK_PATH: C:\Microsoft\AndroidNDK64\android-ndk-r16b
+    AndroidNdkDirectory: C:\Microsoft\AndroidNDK64\android-ndk-r16b
 
   steps:
   - checkout: self
@@ -24,7 +25,7 @@ jobs:
       msbuildLocationMethod: version
       msbuildVersion: latest
       msbuildArchitecture: x86
-      msbuildArguments: /r /p:Configuration=Release "/p:Platform=Any CPU" /detailedsummary "/p:PackageVersion=$(GITVERSION.FullSemVer)" "/p:InformationalVersion=$(GITVERSION.InformationalVersion)"
+      msbuildArguments: /r /p:Configuration=Release "/p:Platform=Any CPU" /detailedsummary "/p:PackageVersion=$(GITVERSION.FullSemVer)" "/p:InformationalVersion=$(GITVERSION.InformationalVersion)" /p:AppxPackageSigningEnabled=false
       clean: false
       maximumCpuCount: true
       restoreNugetPackages: false
