--- a/src/MyApp.Wasm/Properties/launchSettings.json
+++ b/src/MyApp.Wasm/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49420/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:55094/",
+      "sslPort": 44320
     }
   },
   "profiles": {
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:49421/"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
