update net6 image

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-image: mcr.microsoft.com/dotnet/nightly/sdk:6.0
+image: mcr.microsoft.com/dotnet/sdk:6.0
 
 ports:
   # Default port for the SampleApp
