ci: Adjust artifacts

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,5 +22,12 @@ jobs:
         
     - name: Build
       run: |
+        mkdir -p $GITHUB_WORKSPACE/artifacts
+        mkdir -p $GITHUB_WORKSPACE/artifacts/wasm
         cd src/MyApp.Wasm
-        dotnet build -c Release
+        dotnet publish -c Release /bl:/artifacts/mbuild.binlog -o $GITHUB_WORKSPACE/artifacts/wasm
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: drop
+        path: artifacts
