--- a/src/MyApp.Wasm/MyApp.Wasm.csproj
+++ b/src/MyApp.Wasm/MyApp.Wasm.csproj
@@ -17,8 +17,9 @@
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
 		<WasmShellMonoRuntimeExecutionMode>InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>
+		
+		<!-- Disable performance optimizations for faster builds -->
 		<WasmShellEmccLinkOptimization>false</WasmShellEmccLinkOptimization>
-		<WasmShellEnableEmccProfiling>true</WasmShellEnableEmccProfiling>
 	</PropertyGroup>
 	<ItemGroup>
 		<Content Include="Assets\SplashScreen.png" />
