--- a/src/MyApp.Base/base.props
+++ b/src/MyApp.Base/base.props
@@ -1,16 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
 <Project>
-	<ItemGroup>
-		<None Include="$(MSBuildThisFileDirectory)App.xaml" />
-		<ApplicationDefinition
-			Include="$(MSBuildThisFileDirectory)App.xaml"
-			SubType="Designer"
-			XamlRuntime="WinUI"
-			Generator="MSBuild:Compile"
-			Link="App.xaml" />
-		<Compile
-			Include="$(MSBuildThisFileDirectory)App.xaml.cs"
-			XamlRuntime="WinUI"
-			DependentUpon="App.xaml"
-			Link="App.xaml.cs" />	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Uno.Resizetizer" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="$(MSBuildThisFileDirectory)AppHead.xaml" />
+    <ApplicationDefinition Include="$(MSBuildThisFileDirectory)AppHead.xaml"
+                SubType="Designer"
+                XamlRuntime="WinUI"
+                Generator="MSBuild:Compile"
+                Link="AppHead.xaml" />
+    <Compile Include="$(MSBuildThisFileDirectory)AppHead.xaml.cs"
+        XamlRuntime="WinUI"
+        DependentUpon="AppHead.xaml"
+        Link="AppHead.xaml.cs" />
+    <UnoIcon Include="$(MSBuildThisFileDirectory)Icons\icon.svg"
+        ForegroundFile="$(MSBuildThisFileDirectory)Icons\icon_foreground.svg"
+        ForegroundScale="0.65"
+        Color="#00000000" />
+    <UnoSplashScreen
+      Include="$(MSBuildThisFileDirectory)Splash\splash_screen.svg"
+      BaseSize="128,128"
+      Color="#FFFFFF" />
+    <!-- NOTE: Files explicitly linked to display in the head projects for clarity. -->
+    <None Include="$(MSBuildThisFileDirectory)Icons\icon.svg" Link="Icons\icon.svg" />
+    <None Include="$(MSBuildThisFileDirectory)Icons\icon_foreground.svg" Link="Icons\icon_foreground.svg" />
+    <None Include="$(MSBuildThisFileDirectory)Splash\splash_screen.svg" Link="Splash\splash_screen.svg" />
+  </ItemGroup>
 </Project>
