--- a/src/MyApp.Mobile/MyApp.Mobile.csproj
+++ b/src/MyApp.Mobile/MyApp.Mobile.csproj
@@ -1,86 +1,70 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-		<TargetFrameworks>net7.0-android</TargetFrameworks>
-		<TargetFrameworks>$(TargetFrameworks);net7.0-ios</TargetFrameworks>
-		<TargetFrameworks>$(TargetFrameworks);net7.0-maccatalyst</TargetFrameworks>
-
-		
-
-  	</PropertyGroup>
-  <PropertyGroup>
+    <TargetFrameworks>net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OverrideTargetFrameworks)'!=''">$(OverrideTargetFrameworks)</TargetFrameworks>
     <SingleProject>true</SingleProject>
     <OutputType>Exe</OutputType>
     <!-- Display name -->
     <ApplicationTitle>MyApp</ApplicationTitle>
     <!-- App Identifier -->
     <ApplicationId>com.companyname.MyApp</ApplicationId>
-    <ApplicationIdGuid>d424dc51-40ad-4f27-ad81-79bcd3e26ae8</ApplicationIdGuid>
+    <ApplicationIdGuid>5166AB59-6ABF-43FE-9035-42754DA451DB</ApplicationIdGuid>
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
+
+    <AndroidManifest>Android\AndroidManifest.xml</AndroidManifest>
+
+    <!-- Debugger workaround https://github.com/dotnet/maui-samples/blob/8aa6b8780b12e97b157514c3bdc54bb4a13001cd/HelloMacCatalyst/HelloMacCatalyst.csproj#L7 -->
+    <!-- <MtouchExtraArgs Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">$(MtouchExtraArgs) -setenv:MONO_THREADS_SUSPEND=preemptive</MtouchExtraArgs> -->
+    <!-- Required for C# Hot Reload -->
+    <UseInterpreter Condition="'$(Configuration)' == 'Debug' and $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) != 'maccatalyst'">True</UseInterpreter>
     <IsUnoHead>true</IsUnoHead>
-    <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-ios'">14.2</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-maccatalyst'">14.0</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-android'">21.0</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net7.0-macos'">10.14</SupportedOSPlatformVersion>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(RuntimeIdentifier)'==''">
-    <!-- Default values for command line builds -->
-    <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-ios'">iossimulator-x64</RuntimeIdentifier>
-    <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-maccatalyst'">maccatalyst-x64</RuntimeIdentifier>
-    <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-macos'">osx-x64</RuntimeIdentifier>
-  </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI" Version="4.10.13" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.10.13" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.13" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.10.13" />
+    <PackageReference Include="Uno.WinUI" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+    <PackageReference Include="Uno.Extensions.Logging.OSLog" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
+    <PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Choose>
-    <When Condition="'$(TargetFramework)'=='net7.0-android'">
-      <PropertyGroup Condition="'$(Configuration)'=='Release'">
-        <!-- Workaround for .NET Android issue https://github.com/xamarin/xamarin-android/issues/7736 -->
-        <RuntimeIdentifier>android-arm64</RuntimeIdentifier>
-      </PropertyGroup>
+    <When Condition="$(IsAndroid)">
       <ItemGroup>
-        <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0.4" />
-        <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
+
+        <PackageReference Include="Xamarin.Google.Android.Material" />
+        <PackageReference Include="Uno.UniversalImageLoader" />
       </ItemGroup>
       <ItemGroup>
         <AndroidEnvironment Include="Android/environment.conf" />
       </ItemGroup>
     </When>
-    <When Condition="'$(TargetFramework)'=='net7.0-ios'">
-      <PropertyGroup Condition="'$(TargetFramework)'=='net7.0-ios'">
+    <When Condition="$(IsIOS)">
+      <PropertyGroup>
         <MtouchExtraArgs>$(MtouchExtraArgs) --setenv=MONO_GC_PARAMS=soft-heap-limit=512m,nursery-size=64m,evacuation-threshold=66,major=marksweep,concurrent-sweep</MtouchExtraArgs>
         <!-- See https://github.com/unoplatform/uno/issues/9430 for more details. -->
         <MtouchExtraArgs>$(MtouchExtraArgs) --registrar:static</MtouchExtraArgs>
+        <RuntimeIdentifier Condition="'$(RuntimeIdentifier)'==''">iossimulator-x64</RuntimeIdentifier>
+      </PropertyGroup>
+      <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <!-- https://github.com/xamarin/xamarin-macios/issues/14812 -->
         <MtouchExtraArgs>$(MtouchExtraArgs) --marshal-objectivec-exceptions:disable</MtouchExtraArgs>
       </PropertyGroup>
-      <ItemGroup>
-        <PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-      </ItemGroup>
     </When>
-    <When Condition="'$(TargetFramework)'=='net7.0-maccatalyst'">
+    <When Condition="$(IsMacCatalyst)">
       <PropertyGroup>
         <!-- Configure the GC -->
         <MtouchExtraArgs>$(MtouchExtraArgs) --setenv=MONO_GC_PARAMS=soft-heap-limit=512m,nursery-size=64m,evacuation-threshold=66,major=marksweep,concurrent-sweep</MtouchExtraArgs>
         <!-- Required for unknown crash as of .NET 6 Mobile Preview 13 -->
         <MtouchExtraArgs>$(MtouchExtraArgs) --registrar:static</MtouchExtraArgs>
-        <!-- https://github.com/xamarin/xamarin-macios/issues/14812 -->
-        <MtouchExtraArgs>$(MtouchExtraArgs) --marshal-objectivec-exceptions:disable</MtouchExtraArgs>
         <!-- Full globalization is required for Uno -->
         <InvariantGlobalization>false</InvariantGlobalization>
+        <RuntimeIdentifier Condition="'$(RuntimeIdentifier)'==''">maccatalyst-x64</RuntimeIdentifier>
       </PropertyGroup>
-      <ItemGroup>
-        <PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-      </ItemGroup>
-    </When>
-    <When Condition="'$(TargetFramework)'=='net7.0-macos'">
-      <PropertyGroup>
-        <TrimMode Condition="'$(Configuration)'=='Release'">link</TrimMode>
+      <PropertyGroup Condition="'$(Configuration)'=='Release'">
+        <!-- https://github.com/xamarin/xamarin-macios/issues/14812 -->
+        <MtouchExtraArgs>$(MtouchExtraArgs) --marshal-objectivec-exceptions:disable</MtouchExtraArgs>
       </PropertyGroup>
     </When>
   </Choose>
