--- a/src/MyApp.Skia.Linux.FrameBuffer/MyApp.Skia.Linux.FrameBuffer.csproj
+++ b/src/MyApp.Skia.Linux.FrameBuffer/MyApp.Skia.Linux.FrameBuffer.csproj
@@ -4,18 +4,17 @@
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
-  <ItemGroup Condition="exists('..\MyApp.Windows')">
-    <EmbeddedResource Include="..\MyApp.Windows\Package.appxmanifest" LogicalName="Package.appxmanifest" />
-    <Content Include="..\MyApp.Windows\Images\StoreLogo.png" />
-  </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.10.13" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.10.13" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.13" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.10.13" />
-    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+    <EmbeddedResource Include="Package.appxmanifest" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" />
+    <PackageReference Include="SkiaSharp.Skottie" />
+    <PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyApp\MyApp.csproj" />
