chore: Adjust build and missing file

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install .NET Workloads
       shell: pwsh
       run: |
-        & dotnet tool install --global --version 1.11 uno.check
+        & dotnet tool install --global --version 1.16.1 uno.check
         & ~/.dotnet/tools/uno-check --ci --fix --non-interactive --verbose
 
     - name: Build
@@ -31,7 +31,7 @@ jobs:
         mkdir -p $GITHUB_WORKSPACE/artifacts
         mkdir -p $GITHUB_WORKSPACE/artifacts/wasm
         cd src/MyApp.Wasm
-        dotnet publish -c Release -f net7.0 /bl:/artifacts/mbuild.binlog -o $GITHUB_WORKSPACE/artifacts/wasm
+        dotnet publish -c Release -f net7.0 -p:OverrideTargetFrameworks=net7.0 /bl:/artifacts/mbuild.binlog -o $GITHUB_WORKSPACE/artifacts/wasm
 
     - uses: actions/upload-artifact@v2
       with:
